--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the WPSSO App Meta (WPSSO AM) package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO App Meta (WPSSO AM) 1.3.7\n"
+"Project-Id-Version: WPSSO App Meta (WPSSO AM) 1.3.8\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
-"POT-Creation-Date: 2015-10-06 11:54:04+00:00\n"
+"POT-Creation-Date: 2015-10-11 14:53:28+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,9 +12,16 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
-#: lib/config-lib-extract.php:3
+#: lib/config-gettext-extract.php:3
 msgctxt "lib file description"
-msgid "App Meta"
+msgid "Mobile App Meta"
+msgstr ""
+
+#: lib/config-gettext-extract.php:4
+msgctxt "plugin description"
+msgid ""
+"WPSSO extension to provide Apple Store / iTunes and Google Play App meta "
+"tags for Apple's mobile Safari and Twitter's App Card."
 msgstr ""
 
 #: lib/filters.php:130
@@ -25,25 +32,37 @@ msgstr ""
 
 #: lib/filters.php:133 lib/filters.php:220
 msgid ""
-"An <em>App Product</em> tab can be added to the Social Settings metabox on "
-"Posts, Pages, and custom post types, allowing you to enter specific "
-"information about a mobile App."
+"An <em>%1$s</em> tab can be added to the %2$s metabox on Posts, Pages, and "
+"custom post types, allowing you to enter specific information about a mobile "
+"App."
+msgstr ""
+
+#: lib/filters.php:133 lib/filters.php:136 lib/filters.php:205
+#: lib/filters.php:220 lib/gpl/admin/am-general.php:34
+#: lib/pro/admin/am-general.php:40
+msgctxt "metabox tab"
+msgid "App Product"
+msgstr ""
+
+#: lib/filters.php:133 lib/filters.php:205 lib/filters.php:220
+msgctxt "metabox title"
+msgid "Social Settings"
 msgstr ""
 
 #: lib/filters.php:136
 msgid ""
-"The <em>App Product</em> information is used to create meta tags for "
-"Twitter's App Card (instead of generating a Product Card, for example)."
+"The <em>%s</em> information is used to create meta tags for Twitter's App "
+"Card (instead of generating a Summary Card, for example)."
 msgstr ""
 
 #: lib/filters.php:148
 msgid ""
-"The numeric representation of your iPhone App ID in the App Store (example: "
-"\"307234931\")."
+"The numeric representation of your iPhone application ID in the App Store "
+"(example: \"307234931\")."
 msgstr ""
 
 #: lib/filters.php:151
-msgid "The name of your iPhone App."
+msgid "The name of your iPhone application."
 msgstr ""
 
 #: lib/filters.php:154
@@ -54,12 +73,12 @@ msgstr ""
 
 #: lib/filters.php:157
 msgid ""
-"The numeric representation of your iPad App ID in the App Store (example: "
-"\"307234931\")."
+"The numeric representation of your iPad application ID in the App Store "
+"(example: \"307234931\")."
 msgstr ""
 
 #: lib/filters.php:160
-msgid "The name of your iPad App."
+msgid "The name of your iPad application."
 msgstr ""
 
 #: lib/filters.php:163
@@ -70,12 +89,12 @@ msgstr ""
 
 #: lib/filters.php:166
 msgid ""
-"The fully qualified package name of your Google Play App (example: \"com."
-"google.android.apps.maps\")."
+"The fully qualified package name of your Google Play application (example: "
+"\"com.google.android.apps.maps\")."
 msgstr ""
 
 #: lib/filters.php:169
-msgid "The name of your Google Play App."
+msgid "The name of your Google Play application."
 msgstr ""
 
 #: lib/filters.php:172
@@ -99,29 +118,28 @@ msgid ""
 msgstr ""
 
 #: lib/filters.php:193
-msgid "Your website's App ID in the Apple Store (example: \"307234931\")."
+msgid ""
+"Your website's mobile App ID in the Apple Store (example: \"307234931\")."
 msgstr ""
 
 #: lib/filters.php:196
-msgid "An optional iTunes affiliate string, if you are an iTunes affiliate."
+msgid "If you have an iTunes affiliate string, enter it here."
 msgstr ""
 
 #: lib/filters.php:199
 msgid ""
-"A string, that may include any one or more inline variables, to provide "
+"A query string - which may include one or more inline variables - to provide "
 "context to your website's mobile App. If the user has your mobile App "
-"installed, this string may allow them to jump from your website, to the same "
+"installed, this string can allow them to jump from your website to the same "
 "content in the mobile App."
 msgstr ""
 
 #: lib/filters.php:202
-msgid "The App Store country providing your App."
+msgid "The App Store country providing your application."
 msgstr ""
 
 #: lib/filters.php:205
-msgid ""
-"Include the <em>App Product</em> tab in the Social Settings metabox on "
-"Posts, Pages, etc."
+msgid "Include the <em>%1$s</em> tab in the %2$s metabox on Posts, Pages, etc."
 msgstr ""
 
 #: lib/filters.php:214
@@ -132,25 +150,21 @@ msgstr ""
 
 #: lib/filters.php:217
 msgid ""
-"These values are used to create a <em>banner advertisement</em> in Apple's "
-"mobile Safari for your <em>website's</em> Apple Store App."
+"These values are used to create a banner advertisement in Apple's mobile "
+"Safari for your website's Apple Store mobile App."
 msgstr ""
 
 #: lib/filters.php:217
 msgid ""
-"The banner advertisement allows users to download and/or switch to the Apple "
-"Store App instead of navigating your website using Apple's mobile Safari."
+"The banner advertisement allows users to download your mobile App and/or "
+"switch to the Apple Store App instead of navigating your website using "
+"Apple's mobile Safari."
 msgstr ""
 
 #: lib/filters.php:220
 msgid ""
 "The mobile App information is used to create meta tags for Twitter's App "
-"Card (instead of a Large Image Summary Card, for example)."
-msgstr ""
-
-#: lib/gpl/admin/am-general.php:34 lib/pro/admin/am-general.php:40
-msgctxt "normal metabox tab"
-msgid "App Product"
+"Card (instead of a Summary Card, for example)."
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:45
@@ -160,57 +174,70 @@ msgstr ""
 
 #: lib/gpl/admin/am-general.php:52 lib/gpl/admin/am-general.php:129
 #: lib/pro/admin/am-general.php:56 lib/pro/admin/am-general.php:130
+msgctxt "option label"
 msgid "App Store Territory"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:58 lib/pro/admin/am-general.php:63
+msgctxt "metabox title"
 msgid "Apple Store"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:60 lib/pro/admin/am-general.php:65
+msgctxt "option label"
 msgid "iPhone App ID"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:65 lib/gpl/admin/am-general.php:69
 #: lib/pro/admin/am-general.php:70 lib/pro/admin/am-general.php:74
+msgctxt "option label"
 msgid "iPhone App Name"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:74 lib/pro/admin/am-general.php:79
+msgctxt "option label"
 msgid "iPhone App Custom URL Scheme"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:78 lib/pro/admin/am-general.php:83
+msgctxt "option label"
 msgid "iPad App ID"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:83 lib/gpl/admin/am-general.php:87
 #: lib/pro/admin/am-general.php:88 lib/pro/admin/am-general.php:92
+msgctxt "option label"
 msgid "iPad App Name"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:92 lib/pro/admin/am-general.php:97
+msgctxt "option label"
 msgid "iPad App Custom URL Scheme"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:97 lib/pro/admin/am-general.php:102
+msgctxt "metabox title"
 msgid "Google Play"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:99 lib/pro/admin/am-general.php:104
+msgctxt "option label"
 msgid "App ID"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:104 lib/gpl/admin/am-general.php:108
 #: lib/pro/admin/am-general.php:109 lib/pro/admin/am-general.php:113
+msgctxt "option label"
 msgid "App Name"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:113 lib/pro/admin/am-general.php:118
+msgctxt "option label"
 msgid "App Custom URL Scheme"
 msgstr ""
 
 #: lib/gpl/admin/am-general.php:138 lib/pro/admin/am-general.php:139
+msgctxt "option label"
 msgid "Show Tab on Post Types"
 msgstr ""
 
@@ -219,42 +246,66 @@ msgid "Save a draft version or publish the %s to update and enable this field."
 msgstr ""
 
 #: lib/submenu/am-general.php:24
-msgctxt "normal metabox title"
-msgid "Website App"
+msgctxt "metabox title"
+msgid "Website Mobile App"
 msgstr ""
 
 #: lib/submenu/am-general.php:27
-msgctxt "normal metabox title"
-msgid "App Products"
+msgctxt "metabox title"
+msgid "Mobile App Products"
 msgstr ""
 
 #: lib/submenu/am-general.php:40
-msgctxt "normal metabox tab"
+msgctxt "metabox tab"
 msgid "Apple Store"
 msgstr ""
 
 #: lib/submenu/am-general.php:66
+msgctxt "option label"
 msgid "Add to Index Webpages"
 msgstr ""
 
 #: lib/submenu/am-general.php:70
+msgctxt "option label"
 msgid "Add to Static Homepage"
 msgstr ""
 
 #: lib/submenu/am-general.php:80
+msgctxt "option label"
 msgid "Add to Post Types"
 msgstr ""
 
 #: lib/submenu/am-general.php:90
+msgctxt "option label"
 msgid "App ID Number"
 msgstr ""
 
 #: lib/submenu/am-general.php:94
+msgctxt "option label"
 msgid "Affiliate Data"
 msgstr ""
 
 #: lib/submenu/am-general.php:98
+msgctxt "option label"
 msgid "Argument String"
+msgstr ""
+
+#: wpsso-am.php:73
+msgid ""
+"The %1$s extension requires the %2$s plugin &mdash; please install and "
+"activate the %3$s plugin before trying to re-activate the %4$s extension."
+msgstr ""
+
+#: wpsso-am.php:75
+msgid ""
+"The %1$s extension requires the %2$s plugin &mdash; please install and "
+"activate the %3$s plugin."
+msgstr ""
+
+#: wpsso-am.php:125
+msgid ""
+"The %1$s extension version %2$s requires the use of %3$s version %4$s or "
+"newer (version %5$s is currently installed)."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
