--- a/languages/wpsso-am-fr_FR.po
+++ b/languages/wpsso-am-fr_FR.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WPSSO App Meta (WPSSO AM) 1.3.8\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
-"POT-Creation-Date: 2015-10-27 11:22-0400\n"
-"PO-Revision-Date: 2015-10-27 11:22-0400\n"
+"POT-Creation-Date: 2015-11-13 21:25-0700\n"
+"PO-Revision-Date: 2015-11-13 21:29-0700\n"
 "Last-Translator: JS Morisset <jsm@surniaulula.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -29,7 +29,7 @@ msgstr ""
 "Une extension WPSSO qui fournie des balises méta Apple Store / iTunes et "
 "Google Play App pour mobile Safari de Apple et la carte App de Twitter."
 
-#: lib/filters.php:130
+#: lib/filters.php:134
 msgid ""
 "Creates a banner advertisement in Apple's mobile Safari for your website's "
 "mobile App (as an alternative to using a mobile browser)."
@@ -38,37 +38,40 @@ msgstr ""
 "application mobile de site Web (comme alternative à l'utilisation d'un "
 "navigateur mobile)."
 
-#: lib/filters.php:133 lib/filters.php:220
+#: lib/filters.php:137 lib/filters.php:227
 msgid ""
 "An <em>%1$s</em> tab can be added to the %2$s metabox on Posts, Pages, and "
-"custom post types, allowing you to enter specific information about a mobile "
-"App."
+"custom post types, allowing you to enter specific information about one or "
+"more Apple Store and Google Play mobile Apps."
 msgstr ""
-"Un onglet <em>%1$s</em> peut être ajouté à la metabox %2$s sur les Articles, "
-"Pages et les articles de type personnalisé, vous permettant d'entrer des "
-"informations d'une application mobile spécifique."
+"Un onglet <em>%1$s</em> peut être ajouté dans la metabox %2$s sur les "
+"Articles, Pages et les articles de type personnalisé, vous permettant "
+"d'entrer des informations d'une ou plusieurs applications mobile Apple Store "
+"et Google Play."
 
-#: lib/filters.php:133 lib/filters.php:136 lib/filters.php:205
-#: lib/filters.php:220 lib/gpl/admin/am-general.php:34
+#: lib/filters.php:137 lib/filters.php:140 lib/filters.php:209
+#: lib/filters.php:218 lib/filters.php:227 lib/gpl/admin/am-general.php:34
 #: lib/pro/admin/am-general.php:40
 msgctxt "metabox tab"
-msgid "App Product"
-msgstr "Produit App"
+msgid "App Products"
+msgstr "Produits App"
 
-#: lib/filters.php:133 lib/filters.php:205 lib/filters.php:220
+#: lib/filters.php:137 lib/filters.php:209 lib/filters.php:218
+#: lib/filters.php:227
 msgctxt "metabox title"
 msgid "Social Settings"
 msgstr "Réglages Sociaux"
 
-#: lib/filters.php:136
+#: lib/filters.php:140 lib/filters.php:227
 msgid ""
 "The <em>%s</em> information is used to create meta tags for Twitter's App "
-"Card (instead of generating a Summary Card, for example)."
+"Card and customize a mobile App banner for Apple's mobile Safari."
 msgstr ""
 "Les informations <em>%s</em> sont utilisées pour créer des balises méta pour "
-"la carte App de Twitter (au lieu de générer une carte sommaire, par exemple)."
+"la carte App de Twitter et personnaliser la bannière d'App pour le "
+"navigateur mobile Safari d'Apple."
 
-#: lib/filters.php:148
+#: lib/filters.php:152
 msgid ""
 "The numeric representation of your iPhone application ID in the App Store "
 "(example: \"307234931\")."
@@ -76,19 +79,19 @@ msgstr ""
 "La représentation numérique de votre ID d'application iPhone dans l'App "
 "Store (exemple: \"307234931\")."
 
-#: lib/filters.php:151
+#: lib/filters.php:155
 msgid "The name of your iPhone application."
 msgstr "Le nom de votre application iPhone."
 
-#: lib/filters.php:154
+#: lib/filters.php:158
 msgid ""
-"Your iPhone App's custom URL scheme (you must include \"://\" after the "
-"scheme name)."
+"Your iPhone App's <em>custom</em> URL scheme (you must include \"://\" after "
+"the scheme name)."
 msgstr ""
-"Le schéma d'URL personnalisé de votre App iPhone (vous devez inclure '://' "
-"après le nom du schéma)."
+"Le schéma d'URL <em>personnalisé</em> de votre App iPhone (vous devez "
+"inclure '://' après le nom du schéma)."
 
-#: lib/filters.php:157
+#: lib/filters.php:161
 msgid ""
 "The numeric representation of your iPad application ID in the App Store "
 "(example: \"307234931\")."
@@ -96,19 +99,19 @@ msgstr ""
 "La représentation numérique de votre ID d'application iPad dans l'App Store "
 "(exemple: \"307234931\")."
 
-#: lib/filters.php:160
+#: lib/filters.php:164
 msgid "The name of your iPad application."
 msgstr "Le nom de votre application iPad."
 
-#: lib/filters.php:163
+#: lib/filters.php:167
 msgid ""
-"Your iPad App's custom URL scheme (you must include '://' after the scheme "
-"name)."
+"Your iPad App's <em>custom</em> URL scheme (you must include '://' after the "
+"scheme name)."
 msgstr ""
-"Le schéma d'URL personnalisé de votre App iPad (vous devez inclure '://' "
-"après le nom du schéma)."
+"Le schéma d'URL <em>personnalisé</em> de votre App iPad (vous devez inclure "
+"'://' après le nom du schéma)."
 
-#: lib/filters.php:166
+#: lib/filters.php:170
 msgid ""
 "The fully qualified package name of your Google Play application (example: "
 "\"com.google.android.apps.maps\")."
@@ -116,31 +119,31 @@ msgstr ""
 "Le nom complet du paquet de votre application Google Play (example: \"com."
 "google.android.apps.maps\")."
 
-#: lib/filters.php:169
+#: lib/filters.php:173
 msgid "The name of your Google Play application."
 msgstr "Le nom de votre application Google Play."
 
-#: lib/filters.php:172
+#: lib/filters.php:176
 msgid ""
-"Your Google Play App's custom URL scheme (you must include '://' after the "
-"scheme name)."
+"Your Google Play App's <em>custom</em> URL scheme (you must include '://' "
+"after the scheme name)."
 msgstr ""
-"Le schéma d'URL personnalisé de votre application Google Play (vous devez "
-"inclure '://' après le nom du schéma)."
+"Le schéma d'URL <em>personnalisé</em> de votre application Google Play (vous "
+"devez inclure '://' après le nom du schéma)."
 
-#: lib/filters.php:184
+#: lib/filters.php:188
 msgid "Add meta tags for the website's mobile App to index and archive pages."
 msgstr ""
 "Ajouter les balises méta pour l'App mobile du site Web aux pages d'index et "
 "archives."
 
-#: lib/filters.php:187
+#: lib/filters.php:191
 msgid "Add meta tags for the website's mobile App to a static front page."
 msgstr ""
 "Ajouter les balises méta pour l'App mobile du site Web à la page d'accueil "
 "statique."
 
-#: lib/filters.php:190
+#: lib/filters.php:194
 msgid ""
 "Add meta tags for the website's mobile App to Posts, Pages, and custom post "
 "types."
@@ -148,18 +151,15 @@ msgstr ""
 "Ajouter les balises méta pour l'App mobile du site Web aux Articles, Pages, "
 "et articles de type personnalisé."
 
-#: lib/filters.php:193
-msgid ""
-"Your website's mobile App ID in the Apple Store (example: \"307234931\")."
-msgstr ""
-"L'ID de votre App mobile de site Web dans l'Apple Store (exemple: "
-"\"307234931\")."
+#: lib/filters.php:197
+msgid "A mobile App ID in the Apple Store (example: \"307234931\")."
+msgstr "L'ID d'une App mobile dans l'Apple Store (exemple: \"307234931\")."
 
-#: lib/filters.php:196
+#: lib/filters.php:200
 msgid "If you have an iTunes affiliate string, enter it here."
 msgstr "Si vous avez une chaîne d'affiliation iTunes, entrez-la ici."
 
-#: lib/filters.php:199
+#: lib/filters.php:203
 msgid ""
 "A query string - which may include one or more inline variables - to provide "
 "context to your website's mobile App. If the user has your mobile App "
@@ -171,50 +171,52 @@ msgstr ""
 "votre App mobile installée, cette chaîne permet de sauter du site Web au "
 "même contenu sur l'App mobile."
 
-#: lib/filters.php:202
+#: lib/filters.php:206
 msgid "The App Store country providing your application."
 msgstr "Le pays du App Store fournissant votre application."
 
-#: lib/filters.php:205
+#: lib/filters.php:209
 msgid "Include the <em>%1$s</em> tab in the %2$s metabox on Posts, Pages, etc."
 msgstr ""
 "Inclure l'onglet <em>%1$s</em> dans la metabox %2$s, sur les Pages, "
 "Articles, etc.."
 
-#: lib/filters.php:214
+#: lib/filters.php:218
 msgid ""
-"If you have a mobile App to access your website (as an alternative to using "
-"a mobile web browser), enter its details here."
+"These options provide a way to present a banner advertisement in Apple's "
+"mobile Safari for your Apple Store App(s)."
 msgstr ""
-"Si vous avez une application mobile pour accéder à votre site Web (comme "
-"alternative au navigateur web mobile), entrer ces détailles ici."
+"Ces options offrent un moyen de présenter une bannière publicitaire pour vos "
+"Apps du Apple Store dans le navigateur mobile Safari d'Apple."
 
-#: lib/filters.php:217
+#: lib/filters.php:218
 msgid ""
-"These values are used to create a banner advertisement in Apple's mobile "
-"Safari for your website's Apple Store mobile App."
-msgstr ""
-"Crée un bannière publicitaire dans Apple Safari mobile pour votre App mobile "
-"de site Web du Apple Store (comme alternatif à l'utilisation d'un navigateur "
-"mobile)."
-
-#: lib/filters.php:217
-msgid ""
-"The banner advertisement allows users to download your mobile App and/or "
-"switch to the Apple Store App instead of navigating your website using "
-"Apple's mobile Safari."
+"The banner advertisement allows users of your website to download your "
+"mobile App and/or switch to your mobile App when using Apple's mobile Safari."
 msgstr ""
 "La bande publicitaire permet aux utilisateurs de télécharger votre App "
-"mobile et/ou de basculer vers l'application de Apple Store au lieu de "
-"naviguer votre site Web avec Safari mobile d'Apple."
+"mobile et/ou de basculer vers l'application du Apple Store au lieu "
+"d'utiliser le navigateur Safari mobile d'Apple."
 
-#: lib/filters.php:220
+#: lib/filters.php:218
 msgid ""
-"The mobile App information is used to create meta tags for Twitter's App "
-"Card (instead of a Summary Card, for example)."
+"The Apple Store App information can be customized for each Post, Page, and "
+"custom post type under the <em>%1$s</em> tab (enabled above) in the %2$s "
+"metabox."
 msgstr ""
-"Les informations <em>%s</em> sont utilisées pour créer des balises méta pour "
-"la carte App de Twitter (au lieu de générer une carte sommaire, par exemple)."
+"Les informations de l'App Store de Apple peuvent être personnalisées pour "
+"chaque Article, Page et les article de type personnalisé, dans l'onglet <em>"
+"%1$s</em> (activé ci-dessus) dans le metabox %2$s."
+
+#: lib/filters.php:223
+msgid ""
+"If you have an Apple Store App to access your website (as an alternative to "
+"using mobile web browsers, for example) and/or want to promote a single "
+"Apple Store App on your website, enter its details here."
+msgstr ""
+"Si vous avez une App mobile du Apple Store pour accéder à votre site Web "
+"(comme alternative au navigateurs web mobile) et/ou vous voulez promouvoir "
+"une seule App du Apple Store sur votre site Web, entrer ces détailles ici."
 
 #: lib/gpl/admin/am-general.php:45
 msgid ""
@@ -223,74 +225,94 @@ msgstr ""
 "Enregistrer une version brouillon ou publier le %s pour mettre à jour et "
 "afficher cette valeur."
 
-#: lib/gpl/admin/am-general.php:52 lib/gpl/admin/am-general.php:129
-#: lib/pro/admin/am-general.php:56 lib/pro/admin/am-general.php:130
+#: lib/gpl/admin/am-general.php:53 lib/pro/admin/am-general.php:57
+msgctxt "metabox title"
+msgid "Twitter App Card"
+msgstr "Carte Twitter App"
+
+#: lib/gpl/admin/am-general.php:55 lib/pro/admin/am-general.php:59
 msgctxt "option label"
 msgid "App Store Territory"
 msgstr "Territoire du App Store"
 
-#: lib/gpl/admin/am-general.php:58 lib/pro/admin/am-general.php:63
-msgctxt "metabox title"
-msgid "Apple Store"
-msgstr "Apple Store"
-
-#: lib/gpl/admin/am-general.php:60 lib/pro/admin/am-general.php:65
+#: lib/gpl/admin/am-general.php:59 lib/pro/admin/am-general.php:65
 msgctxt "option label"
 msgid "iPhone App ID"
-msgstr "ID de l'App iPhone"
+msgstr "ID d'App iPhone"
 
-#: lib/gpl/admin/am-general.php:65 lib/gpl/admin/am-general.php:69
+#: lib/gpl/admin/am-general.php:64 lib/gpl/admin/am-general.php:68
 #: lib/pro/admin/am-general.php:70 lib/pro/admin/am-general.php:74
 msgctxt "option label"
 msgid "iPhone App Name"
-msgstr "Nom de l'App iPhone"
+msgstr "Nom d'App iPhone"
 
-#: lib/gpl/admin/am-general.php:74 lib/pro/admin/am-general.php:79
+#: lib/gpl/admin/am-general.php:73 lib/pro/admin/am-general.php:79
 msgctxt "option label"
-msgid "iPhone App Custom URL Scheme"
-msgstr "Schéma URL App iPhone personnalisée"
+msgid "iPhone App URL Scheme"
+msgstr "Schéma URL App iPhone"
 
-#: lib/gpl/admin/am-general.php:78 lib/pro/admin/am-general.php:83
+#: lib/gpl/admin/am-general.php:77 lib/pro/admin/am-general.php:83
 msgctxt "option label"
 msgid "iPad App ID"
-msgstr "ID de l'App iPad"
+msgstr "ID d'App iPad"
 
-#: lib/gpl/admin/am-general.php:83 lib/gpl/admin/am-general.php:87
+#: lib/gpl/admin/am-general.php:82 lib/gpl/admin/am-general.php:86
 #: lib/pro/admin/am-general.php:88 lib/pro/admin/am-general.php:92
 msgctxt "option label"
 msgid "iPad App Name"
-msgstr "Nom de l'App iPad"
+msgstr "Nom d'App iPad"
 
-#: lib/gpl/admin/am-general.php:92 lib/pro/admin/am-general.php:97
+#: lib/gpl/admin/am-general.php:91 lib/pro/admin/am-general.php:97
 msgctxt "option label"
-msgid "iPad App Custom URL Scheme"
-msgstr "Schéma URL App iPad personnalisée"
+msgid "iPad App URL Scheme"
+msgstr "Schéma URL App iPad"
 
-#: lib/gpl/admin/am-general.php:97 lib/pro/admin/am-general.php:102
+#: lib/gpl/admin/am-general.php:95 lib/pro/admin/am-general.php:101
+msgctxt "option label"
+msgid "Google Play App ID"
+msgstr "ID d'App Google Play"
+
+#: lib/gpl/admin/am-general.php:100 lib/gpl/admin/am-general.php:104
+#: lib/pro/admin/am-general.php:106 lib/pro/admin/am-general.php:110
+msgctxt "option label"
+msgid "Google Play App Name"
+msgstr "Nom d'App Google Play"
+
+#: lib/gpl/admin/am-general.php:109 lib/pro/admin/am-general.php:115
+msgctxt "option label"
+msgid "Google Play App URL Scheme"
+msgstr "Schéma URL App Google Play"
+
+#: lib/gpl/admin/am-general.php:114 lib/pro/admin/am-general.php:120
+#: lib/submenu/am-general.php:27
 msgctxt "metabox title"
-msgid "Google Play"
-msgstr "Google Play"
+msgid "Mobile App Banner"
+msgstr "Bannière App Mobile"
 
-#: lib/gpl/admin/am-general.php:99 lib/pro/admin/am-general.php:104
+#: lib/gpl/admin/am-general.php:116 lib/pro/admin/am-general.php:122
 msgctxt "option label"
-msgid "App ID"
-msgstr "ID d'App"
+msgid "App ID Number"
+msgstr "Numéro d'ID App"
 
-#: lib/gpl/admin/am-general.php:104 lib/gpl/admin/am-general.php:108
-#: lib/pro/admin/am-general.php:109 lib/pro/admin/am-general.php:113
+#: lib/gpl/admin/am-general.php:120 lib/pro/admin/am-general.php:127
 msgctxt "option label"
-msgid "App Name"
-msgstr "Nom de l'App"
+msgid "Affiliate Data"
+msgstr "Donnée d'affilié"
 
-#: lib/gpl/admin/am-general.php:113 lib/pro/admin/am-general.php:118
+#: lib/gpl/admin/am-general.php:124 lib/pro/admin/am-general.php:132
 msgctxt "option label"
-msgid "App Custom URL Scheme"
-msgstr "Schéma URL d'App personnalisée"
+msgid "Argument String"
+msgstr "Chaîne d'arguments"
 
-#: lib/gpl/admin/am-general.php:138 lib/pro/admin/am-general.php:139
+#: lib/gpl/admin/am-general.php:145 lib/pro/admin/am-general.php:150
 msgctxt "option label"
 msgid "Show Tab on Post Types"
 msgstr "Afficher l'onglet sur articles de type"
+
+#: lib/gpl/admin/am-general.php:149 lib/pro/admin/am-general.php:154
+msgctxt "option label"
+msgid "Default App Store Territory"
+msgstr "Territoire du App Store par défaut"
 
 #: lib/pro/admin/am-general.php:53
 msgid "Save a draft version or publish the %s to update and enable this field."
@@ -300,48 +322,43 @@ msgstr ""
 
 #: lib/submenu/am-general.php:24
 msgctxt "metabox title"
-msgid "Website Mobile App"
-msgstr "App mobile du Site Web"
-
-#: lib/submenu/am-general.php:27
-msgctxt "metabox title"
 msgid "Mobile App Products"
 msgstr "Produits App Mobile"
 
 #: lib/submenu/am-general.php:40
 msgctxt "metabox tab"
-msgid "Apple Store"
-msgstr "Apple Store"
+msgid "Apple Store App"
+msgstr "App du Apple Store"
 
 #: lib/submenu/am-general.php:66
 msgctxt "option label"
-msgid "Add to Index Webpages"
+msgid "Add Banner to Index Webpages"
 msgstr "Ajouter aux pages Web d'index"
 
 #: lib/submenu/am-general.php:70
 msgctxt "option label"
-msgid "Add to Static Homepage"
+msgid "Add Banner to Static Homepage"
 msgstr "Ajouter à la page d'accueil statique"
 
 #: lib/submenu/am-general.php:80
 msgctxt "option label"
-msgid "Add to Post Types"
+msgid "Add Banner to Post Types"
 msgstr "Ajouter aux articles de type"
 
 #: lib/submenu/am-general.php:90
 msgctxt "option label"
-msgid "App ID Number"
-msgstr "Numéro d'ID App"
+msgid "Default App ID Number"
+msgstr "Numéro d'ID App par défaut"
 
 #: lib/submenu/am-general.php:94
 msgctxt "option label"
-msgid "Affiliate Data"
-msgstr "Donnée d'affilié"
+msgid "Default Affiliate Data"
+msgstr "Donnée d'affilié par défaut"
 
 #: lib/submenu/am-general.php:98
 msgctxt "option label"
-msgid "Argument String"
-msgstr "Chaîne d'arguments"
+msgid "Default Argument String"
+msgstr "Chaîne d'arguments par défaut"
 
 #: wpsso-am.php:74
 msgid ""
@@ -390,3 +407,13 @@ msgstr "Jean-Sebastien Morisset"
 #. Author URI of the plugin/theme
 msgid "http://surniaulula.com/"
 msgstr "http://surniaulula.com/"
+
+#~ msgid ""
+#~ "An <em>%1$s</em> tab can be added to the %2$s metabox on Posts, Pages, "
+#~ "and custom post types, allowing you to enter specific information about "
+#~ "one or more Apple iTunes and Google Play mobile Apps."
+#~ msgstr ""
+#~ "Un onglet <em>%1$s</em> peut être ajouté dans la metabox %2$s sur les "
+#~ "Articles, Pages et les articles de type personnalisé, vous permettant "
+#~ "d'entrer des informations d'une ou plusieurs applications mobile Apple "
+#~ "iTunes et Google Play."
