--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -1,8 +1,8 @@
-# Copyright (C) 2016 WPSSO App Meta (WPSSO AM)
-# This file is distributed under the same license as the WPSSO App Meta (WPSSO AM) package.
+# Copyright (C) 2016 WPSSO Mobile App Meta (WPSSO AM)
+# This file is distributed under the same license as the WPSSO Mobile App Meta (WPSSO AM) package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO App Meta (WPSSO AM) 1.7.0-1\n"
+"Project-Id-Version: WPSSO Mobile App Meta (WPSSO AM) 1.7.0-1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2016-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -332,7 +332,7 @@ msgid ""
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "WPSSO App Meta (WPSSO AM)"
+msgid "WPSSO Mobile App Meta (WPSSO AM)"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
