--- a/languages/wpsso-am-fr_FR.po
+++ b/languages/wpsso-am-fr_FR.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WPSSO Mobile App Meta (WPSSO AM) 1.7.5-1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
-"POT-Creation-Date: 2016-07-09 15:49-0400\n"
-"PO-Revision-Date: 2016-07-09 15:49-0400\n"
+"POT-Creation-Date: 2016-07-14 12:00-0400\n"
+"PO-Revision-Date: 2016-07-14 12:01-0400\n"
 "Last-Translator: JS Morisset <jsm@surniaulula.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -23,7 +23,7 @@ msgstr "Méta d'App Mobile"
 #: lib/config-gettext-extract.php:4
 msgctxt "plugin description"
 msgid "WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari and Twitter's App Card."
-msgstr "Une extension WPSSO qui fournie des balises méta Apple Store / iTunes et Google Play App pour mobile Safari de Apple et la carte App de Twitter."
+msgstr "Extension WPSSO qui fournie des balises méta Apple Store / iTunes et Google Play App pour mobile Safari de Apple et la carte App de Twitter."
 
 #: lib/filters.php:201 lib/filters.php:267 lib/filters.php:276
 #: lib/filters.php:282
@@ -295,7 +295,7 @@ msgstr "http://surniaulula.com/extend/plugins/wpsso-am/"
 
 #. Description of the plugin/theme
 msgid "WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari and Twitter's App Card."
-msgstr "Une extension WPSSO qui fournie des balises méta Apple Store / iTunes et Google Play App pour mobile Safari de Apple et la carte App de Twitter."
+msgstr "Extension WPSSO qui fournie des balises méta Apple Store / iTunes et Google Play App pour mobile Safari de Apple et la carte App de Twitter."
 
 #. Author of the plugin/theme
 msgid "JS Morisset"
